--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,7 @@ nav {
 .landing {
   height: 100vh;
   width: 100vw;
-  background: url(../images/home-bg.png) no-repeat;
+  background: url(../images/home-bg.jpg) no-repeat;
   background-size: 100vw 100vh;
 }
 
@@ -620,7 +620,7 @@ hr {
   /*Home*/
 
   .landing {
-    background: url(../images/home-bg-m.png) no-repeat;
+    background: url(../images/home-bg-m.jpg) no-repeat;
     background-size: 100vw 100vh;
   }
 
@@ -833,7 +833,7 @@ hr {
   /*Home*/
 
   .landing {
-    background: url(../images/home-bg-sm.png) no-repeat;
+    background: url(../images/home-bg-sm.jpg) no-repeat;
     background-size: 100vw 100vh;
   }
 
